--- a/start.html
+++ b/start.html
@@ -1,5 +1,3 @@
-<a href="google">link</a>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,7 +5,7 @@
 </head>
 
 <form>
-    "this is a form"<br><br>
+    "Sign up Form"<br><br>
 
     First name:<br>
     <input type="text" placeholder="firstname" name = 'firstname' required><br>
