--- a/navbar.html
+++ b/navbar.html
@@ -29,7 +29,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             
-              <li><a href="/register">Register</a></li>
+            <a href="../start.html">Register</a>
               <li><a href="/login">Login</a></li>
             
 
